# Diplom

./: .gitignore  Atest  CMakeLists.txt  linecount.sh  run.sh  test.cpp
Literature/: !!!![Butcher_J.]_Numerical_methods_for_ordinary_differ(BookZZ.org).pdf:Zone.Identifier  1333218_schoolbook паралельный диагональный.pdf:Zone.Identifier  20603_988e27d20827275e8b2b0533882b0673.djvu:Zone.Identifier  Ans.docx  Chadov_29-10-2014.pdf:Zone.Identifier  Formalev_Reviznikov_Chislennye metody_2004.pdf:Zone.Identifier  Formalyov_V_F__Reviznikov_D_L_Chislennye_metody.djvu:Zone.Identifier  Sravnitelnyjj+analiz+MathCAD+i+Smath+Studio+Desktop+_+Blog+pro+Linux.pdf:Zone.Identifier  [Hairer_YE.,_Nyorsett_S.,_Vanner_G.]_Reshenie_obue(libcats.org).djvu:Zone.Identifier  prep2013_98 Определение жесткости.pdf:Zone.Identifier  up2014_Gid_Sev.pdf:Zone.Identifier  vertopal.com_kurs.pdf:Zone.Identifier  Вузовская_книга-last 2.docx  Вузовская_книга-last 2.docx:Zone.Identifier  Гнездовые методы.pdf:Zone.Identifier  Гурвич1-2.djvu:Zone.Identifier  Жесткие.docx  Жесткие.docx:Zone.Identifier
VKR/Content/: 0-TitlePage.tex  1-Abstract.tex  2-Introduction.tex  3-LiteratureReview.tex  3.5-Example.tex  4-Theory.tex  5-Realisation.tex  6-Result.tex  7-PracticPart.tex  (+1 more)
VKR_Mag/: main.bib  main.tex
report/: report.aux  report.tex  report.toc  text_report.txt  Журнал о практике. Приложение Бак.docx  ОтчётНИР_Садаков.pdf:Zone.Identifier  Практика_Садаков_4_семестр_207.docx  ТитулОтчётаПоНИРМагистранты.doc
src/: CMakeLists.txt  GUI  NotTough.hpp  Tough.hpp  main.cpp
src/Application/: CMakeLists.txt
src/Application/Console/: CMakeLists.txt  crankTest.cpp  experimental.cpp  main.cpp
src/Application/GUI/: CMakeLists.txt  GUITest.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  QCustomPlot.cpp  gui_chem.cpp  main.cpp
src/Butcher/: ButcherTable.cpp  ButcherTable.hpp  CMakeLists.txt
src/Butcher/Methods/: BTC  ButcherTableCreate.cpp
src/ChemicalGenerator/: CMakeLists.txt  RightPartGen.cpp  RightPartGen.hpp
src/GUI/: Arrow.cpp  Arrow.hpp  Bar.cpp  Bar.hpp  BaseLine.cpp  BaseLine.hpp  Box.cpp  Box.hpp  Button.cpp  Button.hpp  ButtonBox.cpp  ButtonBox.hpp  CMakeLists.txt  Config.cmake  Console.cpp  Console.hpp  Cursor.cpp  Cursor.hpp  Description.cpp  Description.hpp  Dialogue.cpp  Dialogue.hpp  Dragable.cpp  Dragable.hpp  DrawableHandler.hpp  Editor.cpp  Editor.hpp  FileTree.cpp  FileTree.hpp  GUIContainer.cpp  GUIContainer.hpp  GUIElement.cpp  GUIElement.hpp  GuiStyle.hpp  HeatMap.cpp  HeatMap.hpp  InputLine.cpp  InputLine.hpp  Interactable.cpp  Interactable.hpp  (+36 more)
src/General/: ButcherTable.cpp  ButcherTable.hpp  CMakeLists.txt  CrashReporter.hpp  Differentiation.cpp  Differentiation.hpp  Enum.hpp  ErrorCodes.hpp  FloatToString.cpp  FloatToString.hpp  FuncMaker.cpp  FuncMaker.hpp  FuncTest.cpp  General.cpp  General.hpp  GlobalVars.hpp  IterationAlgo.cpp  IterationAlgo.hpp  LSM.cpp  LSM.hpp  LU.hpp  Matrix.hpp  QR.hpp  ResourceHolder.hpp  ToughDet.cpp  ToughDet.hpp  Underlying.hpp  func  out.txt
src/General/Butcher/: BTC  ButcherTableCreate.cpp
src/General/StepChoice/: SC-RungeKutta-4-1.txt
src/Input/: CMakeLists.txt  InputHandle.cpp  InputHandle.hpp
src/Math/: BasicMath.cpp  BasicMath.hpp  CMakeLists.txt  FuncMaker.cpp  FuncMaker.hpp  LongDouble.cpp  LongDouble.hpp  LongInt.cpp  LongInt.hpp  Matrix.hpp  SolveSchemeGen.hpp
src/NotTough/: CMakeLists.txt  RungeKutta.cpp  RungeKutta.hpp
src/NumericMethods/: Alg1Solve.hpp  CMakeLists.txt  CubeSpline.cpp  CubeSpline.hpp  Differentiation.cpp  Differentiation.hpp  Gauss.hpp  Integral.cpp  Integral.hpp  Interpolation.cpp  Interpolation.hpp  LSM.cpp  LSM.hpp  LSM.tpp  LU.hpp  QR.hpp  RUN.hpp  SI.hpp
src/ODUSolver/: CMakeLists.txt  IterationAlgo.cpp  IterationAlgo.hpp  RungeKutta.cpp  RungeKutta.hpp  Task.cpp  Task.hpp  ToughDet.cpp  ToughDet.hpp
src/ODUSolver/Chemical/: CMakeLists.txt  ChemicalSolver.cpp  ChemicalSolver.hpp  ChemicalTask.cpp  ChemicalTask.hpp  RightPartGen.cpp.old  RightPartGen.hpp.old
src/ODUSolver/CrankNicolson/: CMakeLists.txt  CrankNicolson.cpp  CrankNicolson.hpp  LameSolver.cpp  LameSolver.hpp
src/ODUSolver/Koshi/: CMakeLists.txt  KS.cpp  KoshiSolver.cpp  KoshiSolver.hpp  KoshiTask.cpp  KoshiTask.hpp
src/ODUSolver/Koshi/KrankNicolas/: CMakeLists.txt  G.cpp  Gauss.cpp  General.hpp  KrancNicolas.cpp  KrancNicolas.hpp  SI.hpp  a.out  file.txt  fileout.txt  main  main.cpp  test2.txt  test4.txt  test6.txt
src/PDF-reporter/: CMakeLists.txt  ReportGenerator.cpp  ReportGenerator.hpp
src/PDFReporter/: CMakeLists.txt  ReportGenerator.cpp  ReportGenerator.hpp
src/SFExtensions/: CMakeLists.txt  EllipseShape.cpp  EllipseShape.hpp  Line.cpp  Line.hpp  PolygonShape.cpp  PolygonShape.hpp  RhombShape.cpp  RhombShape.hpp  SpriteManager.cpp  SpriteManager.hpp  SquircleShape.cpp  SquircleShape.hpp
test/: CMakeLists.txt  test1.txt  test2.txt  test24.txt  test3.txt  test4.txt  test5.txt  test_mater.txt
test/ChemicTest/: bufermm.txt  bufermm1.txt  bufermm2.txt  reactions.txt  test1.txt  test10.txt  test2-1.txt  test2-2.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.py  test7.txt  test8.txt  test9.txt
test/ModuleTest/src/: ChemicalGeneratorTest.cpp  DifferentiationTest.cpp  FMTest.cpp  FuncMakerCalculator.cpp  FuncMakerTest.cpp
test/ODUTest/Order1/: test1.txt  test10.txt  test12.txt  test13.txt  test14.txt  test15.txt  test2.txt  test3.txt  test4.txt  test_tough1.txt  test_tough2.txt
test/ODUTest/Order2/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test24.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  test_tough1.txt  test_tough2.txt  test_tough3.txt
test/ODUTest/Order4/: test1.txt  test2.txt
test/ODUTest/Systems/: test1.txt  test2.txt
test/Order1/: test1.txt  test10.txt  test11.txt  test12.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
test/Order2/: test1.txt  test2.txt
test/Order3/: test1.txt
test/Order4/: test1.txt
(+58 files in other folders)
